# dirark

./: LICENSE  README.md  pyproject.toml
coverage/: report.md
dirark/: __init__.py  __main__.py  core.py  reader.py  storage.py  sync.py
dirark/tests/: test_core.py  test_init.py  test_reader.py  test_storage.py  test_sync.py
docs/: api.md  release_notes.md
