[project]
name = "dirark"
description = "Directory archival"
dynamic = ["version"]
authors = [{name = "Endre Márk Borza", email = "endremborza@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/endremborza/dirark"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "dirark/__init__.py"

[tool.ruff.lint]
select = ["E", "F", "I"]
